Created endpoint to change booking status
