# server/api/controllers/booking/routes.js
@@ -4,5 +4,6 @@ import controller from './controller';
 
 export default express
   .Router()
+  .put('/:bookingId', authHandler, controller.changeStatusOfABooking)
   .post('/initializeBooking', authHandler, controller.createBooking)
   .post('/verifyBooking', authHandler, controller.verifyBooking);
